# filehub

./: .exrc  .ghci  .gitattributes  .gitignore  .hlint.yaml  .profile  Dockerfile  README.md  cabal.project.local  default.nix  filehub.cabal  flake.nix  hie.yaml  justfile  shell.nix
.github/workflows/: main.yml
app/: Main.hs
benchmark/: Main.hs  Wrk.hs
data/: dark.css  dark1.css  dark2.css  dark3.css  light.css  light1.css  light2.css  light3.css  locale.toml  style.css  ui.js
data/filehub/: ballon.js  balloon.js  common.css  cookie.js  debug.js  desktop.css  history.js  login.css  login.js  main.js  mobile.css  reset.css  serviceWorker.js  site.webmanifest  style-desktop.css  style.css  theme-light.css  ui.css  ui.js  viewer.css  viewer.js
data/filehub/containers/: Observable.js
data/filehub/handlers/: ballon.js  contextmenu.js  desktop.js  errors.js  mobile.js  multiselect.js  selected.js  theme.js  viewer.js
data/filehub/handlers/desktop/: closeDropdown.js  contextmenu.js  drag.js  locale.js  scroll.js  selected.js
data/filehub/handlers/mobile/: closePanel.js  closeSidebar.js  holdSelect.js  selected.js
data/filehub/pdfjs-5.4/: README.md  viewer.css  viewer.html  viewer.mjs
data/viewerjs/: README.md
js/: ballon.ts  balloon.ts  common.css  cookie.ts  debug.ts  def.ts  desktop.css  imgviewer.dot  justfile  login.css  login.ts  main.ts  mobile.css  package-lock.json  package.json  serviceWorker.ts  theme-dark.css  tsconfig.json  ui.css  ui.ts  viewer.css  viewer.ts
js/containers/: Observable.ts
js/css/: common.css  desktop.css  mobile.css  style-desktop.css  style-mobile.css  theme-dark.css  theme-light.css  viewer.css
js/handlers/: ballon.ts  closeDropdown.ts  contextmenu.ts  desktop.ts  errors.ts  mobile.ts  multiselect.ts  selected.ts  theme.ts  viewer.ts
js/handlers/desktop/: closeDropdown.ts  contextmenu.ts  drag.ts  locale.ts  scroll.ts  selected.ts
js/handlers/mobile/: closePanel.ts  closeSidebar.ts  holdSelect.ts  selected.ts
js/icons/: site.webmanifest
local/: README.md  flake.nix  justfile
local/authelia/: .jwt-secret  .session-secret  .storage-encryption-key  README.md  config.yml  users_database.yml
local/filehub/: config.toml
local/nix/: dns-host.nix
local/ssl/: localhost.crt  localhost.key
nix/modules/: default.nix
src/: EvtLog.hs  Filehub.hs  Main.hs
src/Cache/: Dummy.hs  InMemory.hs  Key.hs
src/Data/: ClientPath.hs  File.hs  Queue.hs
src/Data/ClientPath/: Effectful.hs
src/Effectful/Extended/: Cache.hs  LockManager.hs
src/Filehub/: Auth.hs  ClientPath.hs  Config.hs  ControlPanel.hs  Cookie.hs  Copy.hs  Display.hs  Domain.hs  Domain.hs-boot  Entry.hs  Env.hs  Env.hs-boot  Error.hs  EvtLog.hs  ExpandEnv.hs  File.hs  Handler.hs  Index.hs  Layout.hs  Links.hs  Locale.hs  Log.hs  Mime.hs  Monad.hs  MultiSelect.hs  Notification.hs  Options.hs  Orphan.hs  QQ.hs  ReadOnly.hs  Routes.hs  Selected.hs  Server.hs  Session.hs  Session.hs-boot  SessionPool.hs  SharedLink.hs  Size.hs  Sort.hs  Storage.hs  (+10 more)
src/Filehub/ActiveUser/: Pool.hs  Types.hs
src/Filehub/Auth/: OIDC.hs  OIDC.hs-boot  Simple.hs  Simple.hs-boot  Types.hs
src/Filehub/Auth/Types/: AuthId.hs
src/Filehub/Cache/: Dummy.hs  InMemory.hs  Key.hs
src/Filehub/Config/: Options.hs  Toml.hs
src/Filehub/Copy/: Types.hs
src/Filehub/Domain/: ClientPath.hs  File.hs  Mime.hs  Theme.hs  Types.hs  Viewer.hs
src/Filehub/Effectful/: Cache.hs  LockManager.hs
src/Filehub/Env/: Internal.hs  Session.hs  SessionPool.hs  Target.hs  Types.hs
src/Filehub/LockRegistry/: Dummy.hs  Key.hs  Local.hs
src/Filehub/Notification/: Types.hs
src/Filehub/Selected/: Types.hs
src/Filehub/Server/: Component.hs  Components.hs  Delete.hs  Desktop.hs  Display.hs  Download.hs  DynamicRaw.hs  Handler.hs  InitViewer.hs  Internal.hs  Middleware.hs  Mobile.hs  Move.hs  Paste.hs  ReadOnly.hs  Resoluiton.hs  Session.hs  Upload.hs
src/Filehub/Server/Component/: Desktop.hs  Mobile.hs
src/Filehub/Server/Context/: ReadOnly.hs  Resolution.hs  Session.hs
src/Filehub/Server/Middleware/: Display.hs  Session.hs
src/Filehub/Server/Platform/: Desktop.hs  Mobile.hs
src/Filehub/Session/: Access.hs  Copy.hs  Copy.hs-boot  Effectful.hs  Internal.hs  Pool.hs  Selected.hs  Selected.hs-boot  Types.hs
src/Filehub/Session/Types/: SessionId.hs
src/Filehub/SessionPool/: Types.hs
src/Filehub/Storage/: Context.hs  Dummy.hs  Effect.hs  Error.hs  File.hs  File.hs-boot  Internal.hs  S3.hs  S3.hs-boot  Types.hs
src/Filehub/Template/: Desktop.hs  Internal.hs  Login.hs  Mobile.hs  Shared.hs
src/Filehub/Template/Platform/: Desktop.hs  Mobile.hs
src/LockRegistry/: Dummy.hs  Key.hs  Local.hs
src/Network/Mime/: Extended.hs
src/Network/Wai/Middleware/: Extended.hs  Filehub.hs
src/Storage/: Error.hs  File.hs  S3.hs  Virtual.hs
src/System/FilePath/: Extended.hs
src/Text/: Debug.hs
src/Worker/: Pool.hs  Task.hs
storybook/: Main.hs
test/: Main.hs
test_integration/: Main.hs
test_unit/: EvtLogSpec.hs
test_unit/Data/: ClientPathSpec.hs
test_unit/Effectful/Extended/: CacheSpec.hs  LockManagerSpec.hs
