cabal-version:      3.0
name:               filehub
version:            0.1.3.0
author: Ailrk
maintainer:         jimmy@ailrk.com
build-type:         Simple
data-files:         data/**/*.css
                    data/**/*.js
                    data/**/*.png
                    data/**/*.ico


common extensions
    default-extensions:
      BlockArguments
      DataKinds
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      ImportQualifiedPost
      KindSignatures
      LambdaCase
      NoFieldSelectors
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TypeApplications
      TypeOperators
      TypeFamilies
      FlexibleInstances


common options
    ghc-options:
      -- force all warnings to be on and selectively disable some
      -Weverything
      -Wno-all-missed-specialisations
      -Wno-ambiguous-fields
      -Wno-implicit-prelude
      -Wno-missing-deriving-strategies
      -Wno-missing-export-lists
      -Wno-missing-import-lists
      -Wno-missing-kind-signatures
      -Wno-missing-local-signatures
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-safe
      -Wno-unsafe
      -Wno-unticked-promoted-constructors
      -threaded


flag debug
  description: Enable debug mode
  default: False
  manual: True


library
  import: extensions, options
  if flag(debug)
    cpp-options: -DDEBUG

  hs-source-dirs: src
  build-depends:
      base >=4.16.1.0
    , base64-bytestring
    , JuicyPixels
    , JuicyPixels-stbir
    , aeson
    , aeson-pretty
    , amazonka
    , amazonka-s3
    , async
    , bytestring
    , bcrypt
    , case-insensitive
    , conduit
    , containers
    , cookie
    , cryptohash-sha256
    , cryptonite
    , directory
    , data-default
    , effectful
    , filepath
    , file-embed
    , fuzzy
    , generic-lens
    , hashable
    , hashtables
    , http-client
    , http-client-tls
    , http-api-data
    , http-types
    , jwt
    , log-base
    , log-effectful
    , lucid
    , microlens
    , microlens-platform
    , mime-types
    , network-uri
    , optparse-applicative
    , random
    , retry
    , servant
    , servant-client
    , servant-conduit
    , servant-lucid
    , servant-multipart
    , servant-server
    , split
    , string-interpolate
    , suspend
    , temporary
    , text
    , time
    , timers
    , tomland
    , transformers
    , unliftio
    , unordered-containers
    , uri-encode
    , uuid
    , vault
    , vector
    , wai
    , wai-app-static
    , wai-extra
    , warp
    , zip

  exposed-modules:
    Filehub.ActiveUser.Types
    Filehub.ActiveUser.Pool
    Filehub.Auth.Types
    Filehub.Auth.Types.AuthId
    Filehub.Auth.Simple
    Filehub.Auth.OIDC
    Filehub.ClientPath
    Filehub.Cookie
    Filehub.Config
    Filehub.Config.Toml
    Filehub.Config.Options
    Filehub.Display
    Filehub.Env
    Filehub.ExpandEnv
    Filehub.Error
    Filehub.Links
    Filehub.Locale
    Filehub.Log
    Filehub.Mime
    Filehub.Monad
    Filehub.Orphan
    Filehub.Routes
    Filehub.Selected
    Filehub.Server
    Filehub.Server.Handler
    Filehub.Server.Platform.Desktop
    Filehub.Server.Platform.Mobile
    Filehub.Server.Internal
    Filehub.Server.Middleware
    Filehub.Session
    Filehub.Session.Internal
    Filehub.Session.Pool
    Filehub.Session.Copy
    Filehub.Session.Selected
    Filehub.Session.Types
    Filehub.Session.Types.SessionId
    Filehub.Size
    Filehub.Sort
    Filehub.Storage
    Filehub.Storage.Context
    Filehub.Storage.File
    Filehub.Storage.S3
    Filehub.Storage.Types
    Filehub.Target
    Filehub.Target.Class
    Filehub.Target.Types
    Filehub.Target.Types.TargetId
    Filehub.Target.Types.TargetView
    Filehub.Target.File
    Filehub.Target.S3
    Filehub.Template
    Filehub.Template.Platform.Desktop
    Filehub.Template.Platform.Mobile
    Filehub.Template.Shared
    Filehub.Template.Internal
    Filehub.Template.Login
    Filehub.Theme
    Filehub.Types
    Filehub.UserAgent
    Paths_filehub

  default-language: Haskell2010


executable filehub
  import: extensions, options
  if flag(debug)
    cpp-options: -DDEBUG
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >=4.16.1.0
    , filehub

  default-language: Haskell2010


test-suite filehub_test
  import: extensions, options
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Main.hs
  build-depends:
      base >=4.16.1.0
    , QuickCheck
    , bcrypt
    , bytestring
    , containers
    , cookie
    , directory
    , effectful
    , filehub
    , filepath
    , hspec
    , hspec-wai
    , http-api-data
    , http-types
    , http-client
    , http-client-tls
    , log-base
    , log-effectful
    , servant-server
    , time
    , uri-encode
    , uuid
    , wai
    , wai-extra
  default-language:   Haskell2010


benchmark filehub_bench
  import: extensions, options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:
      base >=4.16 && <5
    , filehub
    , criterion >=1.6
    , async
    , req
    , time
    , process
    , temporary
    , http-types
  default-language: Haskell2010
