cabal-version:      3.0
name:               filehub
version:            0.1.3.0
author: Ailrk
maintainer:         jimmy@ailrk.com
build-type:         Simple
data-files:         data/**/*.css
                    data/**/*.js
                    data/**/*.png
                    data/**/*.ico


common extensions
    default-extensions:
      BlockArguments
      DataKinds
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      ImportQualifiedPost
      KindSignatures
      LambdaCase
      NoFieldSelectors
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TypeApplications
      TypeOperators
      TypeFamilies
      FlexibleInstances


common options
    ghc-options:
      -- force all warnings to be on and selectively disable some
      -Weverything
      -Wno-all-missed-specialisations
      -Wno-ambiguous-fields
      -Wno-implicit-prelude
      -Wno-missing-deriving-strategies
      -Wno-missing-export-lists
      -Wno-missing-import-lists
      -Wno-missing-kind-signatures
      -Wno-missing-local-signatures
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-safe
      -Wno-unsafe
      -Wno-unticked-promoted-constructors
      -threaded


flag debug
  description: Enable debug mode
  default: False
  manual: True


library
  import: extensions, options
  if flag(debug)
    cpp-options: -DDEBUG
  hs-source-dirs: src
  build-depends:
      base >=4.16.1.0
    , JuicyPixels
    , JuicyPixels-stbir
    , aeson
    , aeson-pretty
    , amazonka
    , amazonka-s3
    , async
    , base64-bytestring
    , bcrypt
    , binary
    , bytestring
    , case-insensitive
    , conduit
    , containers
    , cookie
    , cryptohash-sha256
    , cryptonite
    , data-default
    , directory
    , effectful
    , file-embed
    , filepath
    , fuzzy
    , generic-lens
    , hashable
    , hashtables
    , http-api-data
    , http-client
    , http-client-tls
    , http-types
    , jwt
    , log-base
    , log-effectful
    , lucid
    , microlens
    , microlens-platform
    , mime-types
    , network-uri
    , optparse-applicative
    , psqueues
    , random
    , retry
    , servant
    , servant-client
    , servant-conduit
    , servant-event-stream
    , servant-lucid
    , servant-multipart
    , servant-server
    , split
    , sqlite-simple
    , stm
    , string-interpolate
    , suspend
    , temporary
    , text
    , time
    , timers
    , tomland
    , transformers
    , unliftio
    , unordered-containers
    , uri-encode
    , uuid
    , vault
    , vector
    , wai
    , wai-app-static
    , wai-extra
    , warp
    , zip


  exposed-modules:
    Cache.Dummy
    Cache.InMemory
    Cache.Key
    Data.ClientPath
    Data.File
    Data.Queue
    Effectful.Extended.Cache
    Effectful.Extended.LockManager
    Filehub
    Filehub.ActiveUser.Pool
    Filehub.ActiveUser.Types
    Filehub.Auth.OIDC
    Filehub.Auth.Simple
    Filehub.Auth.Types
    Filehub.Auth.Types.AuthId
    Filehub.Config
    Filehub.Config.Options
    Filehub.Config.Toml
    Filehub.Cookie
    Filehub.Display
    Filehub.Env
    Filehub.Error
    Filehub.Handler
    Filehub.Links
    Filehub.Locale
    Filehub.Log
    Filehub.Monad
    Filehub.Notification.Types
    Filehub.Orphan
    Filehub.Routes
    Filehub.Selected
    Filehub.Server
    Filehub.Server.Component
    Filehub.Server.Component.Desktop
    Filehub.Server.Component.Mobile
    Filehub.Server.Delete
    Filehub.Server.Download
    Filehub.Server.InitViewer
    Filehub.Server.Internal
    Filehub.Server.Move
    Filehub.Server.Paste
    Filehub.Server.Upload
    Filehub.Session
    Filehub.Session.Copy
    Filehub.Session.Internal
    Filehub.Session.Pool
    Filehub.Session.Selected
    Filehub.Session.Types
    Filehub.Session.Types.SessionId
    Filehub.SharedLink
    Filehub.Size
    Filehub.Sort
    Filehub.Storage.Error
    Filehub.Storage.File
    Filehub.Storage.Dummy
    Filehub.Storage.S3
    Filehub.Storage.Types
    Filehub.Target
    Filehub.Template
    Filehub.Template.Desktop
    Filehub.Template.Login
    Filehub.Template.Mobile
    Filehub.Template.Shared
    Filehub.Theme
    Filehub.Types
    Filehub.UserAgent
    LockRegistry.Dummy
    LockRegistry.Key
    LockRegistry.Local
    Network.Mime.Extended
    Network.Wai.Middleware.Extended
    Network.Wai.Middleware.Filehub
    Storage.Error
    Storage.File
    Storage.S3
    Storage.Virtual
    System.FilePath.Extended
    Target.File
    Target.S3
    Target.Virtual
    Target.Dummy
    Target.Types
    Worker.Pool
    Worker.Task
    Paths_filehub
  default-language: Haskell2010


executable filehub
  import: extensions, options
  if flag(debug)
    cpp-options: -DDEBUG
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >=4.16.1.0
    , filehub

  default-language: Haskell2010


test-suite filehub_test
  import: extensions, options
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Main.hs
  build-depends:
      base >=4.16.1.0
    , QuickCheck
    , bcrypt
    , bytestring
    , containers
    , cookie
    , directory
    , effectful
    , filehub
    , filepath
    , hspec
    , hspec-wai
    , http-api-data
    , http-types
    , http-client
    , http-client-tls
    , log-base
    , log-effectful
    , servant-server
    , time
    , uri-encode
    , uuid
    , wai
    , wai-extra
  default-language:   Haskell2010


benchmark filehub_bench
  import: extensions, options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:
      base >=4.16 && <5
    , filehub
    , criterion >=1.6
    , async
    , req
    , time
    , process
    , temporary
    , http-types
  default-language: Haskell2010


executable filehub_storybook
  import: extensions, options
  if flag(debug)
    cpp-options: -DDEBUG
  main-is:
    Main.hs
  other-modules: Paths_filehub
  autogen-modules: Paths_filehub
  hs-source-dirs: storybook
  build-depends:
      base >=4.16.1.0
    , bytestring
    , effectful
    , filehub
    , http-types
    , lucid
    , optparse-applicative
    , text
    , wai
    , warp
    , network-uri
    , string-interpolate
    , http-client
    , directory
    , filepath
    , mime-types
    , time-qq
    , process
